# oidc_roles_mapping

./: .gitignore  README.md  pyproject.toml
oidc_roles_mapping/: callback.py  custom_auth.py  hooks.py  modules.txt
oidc_roles_mapping/config/: config.yaml
oidc_roles_mapping/doctype/role_mapping/: role_mapping.json
oidc_roles_mapping/doctype/role_profile_mapping/: role_profile_mapping.json  role_profile_mapping.py
oidc_roles_mapping/doctype/social_login_key_extension/: social_login_key_extension.json
oidc_roles_mapping/overrides/: auth.py  oauth2_logins.py
oidc_roles_mapping/setup/: install.py  uninstall.py  yaml_parser.py
oidc_roles_mapping/setup/assets/: config.yaml
