[project]
name = "oidc_roles_mapping"
authors = [
    { name = "Antoine LE GUILLOU", email = "antoinehadrienleguillou@outlook.com"}
]
description = "Adding OIDC roles mapping capabilities to Social Login Key DocType."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "jwt~=1.3.1",
    "pyyaml~=6.0.1"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
